--- a/src/main/resources/templates/listEmployee.html
+++ b/src/main/resources/templates/listEmployee.html
@@ -48,8 +48,8 @@
                             </ul>
                         </li>
                     </ul>
-                    <form class="d-flex" th:action="@{/search}" method="get">
-                        <input class="form-control me-2" type="text" name="search" placeholder="Search by name"
+                    <form class="d-flex" th:action="@{/searchByBrand}" method="get">
+                        <input class="form-control me-2" type="text" name="search" placeholder="Search by brand"
                                aria-label="Search">
                         <button class="btn btn-outline-success" type="submit">Search</button>
                     </form>
